--- a/menu-black.css
+++ b/menu-black.css
@@ -7,6 +7,7 @@
   /* top: 1845px!important; */
   left: 0!important;
   z-index: 7;
+  
 }
 
 
@@ -63,8 +64,8 @@
 .menu-bg-black, #menu-bar-black{
   /* top: 1800px; */
   left: 0;
-  
-  /* position: absolute; */
+  top: 15px;
+  position: absolute;
 }
 
 .menu-bg-black {
