--- a/menu-black2.css
+++ b/menu-black2.css
@@ -4,7 +4,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 2830px!important;
+  top: 3072px;
   left: 0!important;
   z-index: 1;
 }
@@ -29,7 +29,7 @@
   color: white;
   position: absolute;
   left: 65px;
-  top: 2845px;
+  top: 3087px;
   z-index: 1
 }
 
@@ -39,11 +39,12 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 2860px!important;
+  top: 3110px;
   left: 0px!important;
   z-index: 1;
   transition: 0.5s ease;
   display: none;
+
 }
 .nav-black2 li a {
   color: white;
@@ -60,7 +61,7 @@
 }
 
 .menu-bg-black2, #menu-bar-black2{
-  top: 2800px;
+  top: 3081px;
   left: 0;
   /* position: absolute; */
 }
@@ -75,6 +76,8 @@
   background: circle;
   border-radius: 50%;
   transition: 0.3s ease;
+  left: 16px;
+
 }
 
 #menu-bar-black2 {
