--- a/menu-red-pricing.css
+++ b/menu-red-pricing.css
@@ -4,7 +4,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 706px!important;
+  top: 769px!important;
   left: 0!important;
   z-index: 13;
 }
@@ -40,7 +40,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 770px!important;
+  top: 801px!important;
   left: 0px!important;
   z-index: 13;
   transition: 0.5s ease;
@@ -68,6 +68,9 @@
 
 .menu-bg-red {
   position: absolute;
+  top: 765px;
+  left: 18px;
+
   z-index: 12;
   width: 0;
   height: 0;
