--- a/menu-skyblue.css
+++ b/menu-skyblue.css
@@ -4,7 +4,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 2430px!important;
+  top: 2436px!important;
   left: 0!important;
   z-index: 1;
 }
@@ -29,7 +29,7 @@
   color: white;
   position: absolute;
   left: 65px;
-  top: 2445px;
+  top: 2451px;
   z-index: 1
 }
 
@@ -75,6 +75,9 @@
   background: circle;
   border-radius: 50%;
   transition: 0.3s ease;
+  top: 2403px;
+  left: 17px;
+
 }
 
 #menu-bar-skyblue {
