--- a/menu-white.css
+++ b/menu-white.css
@@ -29,7 +29,7 @@
   color: black;
   position: relative;
   left: 65px;
-  top: 50px;
+  top: 54px;
   z-index: 7;
   text-decoration: none
 }
@@ -41,18 +41,18 @@
   cursor: pointer;
   position: absolute;
   top: 80px!important;
-  left: 130px!important;
+  left: -1px!important;
   z-index: 7;
   transition: 0.5s ease;
   display: none;
 }
 .nav-white li a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 .nav-white li a:hover {
   font-weight: bold;
-  color: var(--black);
+  color: var(--red);
 }
 
 .nav-white li {
@@ -75,7 +75,7 @@
   width: 0;
   height: 0;
   margin: 0 0 0 20px;
-  background-color: var(--cyan);
+  background-color: var(--black);
   background: circle ;
   border-radius: 50%;
   transition: 0.3s ease;
@@ -89,17 +89,17 @@
 .change-bg-white {
   width: 300px;
   height: 300px;
-  transform: translate(-25%, -25%);
+  transform: translate(-51%, -29%);
 }
 
 .change-white .bar-white  {
   /* color: var(--black) */
-  background-color: var(--black);
+  background-color: var(--red);
  
 }
 
 .change-nav-title-white {
-  color: var(--black);
+  color: var(--red);
 }
 
 .change-white #bar1-white {
